--- a/Views/KeybindWindow.xaml
+++ b/Views/KeybindWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<adonisControls:AdonisWindow  
              xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI" 
              xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+             xmlns:adonisExtensions="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
              x:Class="TAC_COM.Views.KeybindWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -13,7 +14,6 @@
              d:DesignHeight="150" d:DesignWidth="250"
              Height="160" Width="250"
              ResizeMode="NoResize"
-             
              Topmost="True"
              Title="SET NEW KEYBIND"
              TitleBarForeground="White" 
@@ -41,11 +41,49 @@
             <TextBlock>
                 PRESS NEW KEYBIND
             </TextBlock>
-            <Label Height="40" Content="{Binding NewKeybindName}"
+            <Label Height="20" Content="{Binding NewKeybindName}"
                    HorizontalAlignment="Center"
-                   Foreground="#FFBD0000"/>
-            <Button Command="{Binding CloseKeybindDialog}">
+                   VerticalAlignment="Center"
+                   Margin="0, 10, 0, 10"
+                   Foreground="{DynamicResource {x:Static adonisUi:Brushes.WindowButtonInteractionBrush}}"/>
+            <Button DockPanel.Dock="Right" Width="80" Height="24" 
+                    HorizontalAlignment="Center" VerticalAlignment="Center" 
+                    HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+                    Foreground="{DynamicResource {x:Static adonisUi:Brushes.Layer2IntenseHighlightBrush}}" Cursor="Hand"
+                    Command="{Binding CloseKeybindDialog}" FontSize="14"
+                    BorderThickness="0"
+                    adonisExtensions:CursorSpotlightExtension.RelativeSpotlightSize="0"
+                    adonisExtensions:CursorSpotlightExtension.MaxBlurRadius="0">
                 CONFIRM
+                <Button.Style>
+                    <Style TargetType="Button">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="Button">
+                                    <Border Background="{TemplateBinding Background}"
+                                    BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer2BorderBrush}}"
+                                    BorderThickness="1" CornerRadius="1">
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    </Border>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="False">
+                                <Setter Property="Background" Value="{DynamicResource {x:Static adonisUi:Brushes.Layer2HighlightBrush}}"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="{DynamicResource {x:Static adonisUi:Brushes.Layer2InteractionBrush}}"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter Property="Background" Value="{DynamicResource {x:Static adonisUi:Brushes.Layer3BackgroundBrush}}"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Opacity" Value="0.3"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
             </Button>
         </StackPanel>
 
