--- a/Controls/Dial.xaml
+++ b/Controls/Dial.xaml
@@ -76,7 +76,7 @@
                 <Grid.RenderTransform>
                     <TransformGroup>
                         <!--Bind this for rotation angle -->
-                        <RotateTransform Angle="0"/>
+                        <RotateTransform Angle="0" x:Name="Marker"/>
                         <TranslateTransform Y="-110"/>
                     </TransformGroup>
                 </Grid.RenderTransform>
