--- a/Views/KeybindWindow.xaml
+++ b/Views/KeybindWindow.xaml
@@ -38,18 +38,18 @@
         <StackPanel Grid.Column="2" Grid.Row="2"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center">
-            <TextBlock>
+            <TextBlock FontSize="14">
                 PRESS NEW KEYBIND
             </TextBlock>
             <Label Height="20" Content="{Binding NewKeybindName}"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
-                   Margin="0, 10, 0, 10"
+                   Margin="0, 5, 0, 5"
                    Foreground="{DynamicResource {x:Static adonisUi:Brushes.WindowButtonInteractionBrush}}"/>
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center"
                         Margin="5">
                 <Label HorizontalAlignment="Center" VerticalAlignment="Center"
-                       FontSize="12" FontWeight="Normal"
+                       FontSize="12" FontWeight="Normal" Margin="0, 0, 10, 0"
                        Foreground="{DynamicResource {x:Static adonisUi:Brushes.WindowButtonInteractionBrush}}">
                     PASSTHROUGH
                 </Label>
