--- a/Views/KeybindWindowView.xaml
+++ b/Views/KeybindWindowView.xaml
@@ -20,7 +20,7 @@
              TitleBarBackground="{DynamicResource {x:Static adonisUi:Brushes.WindowButtonInteractionBrush}}"
              BorderThickness="1" 
              BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.WindowButtonInteractionBrush}}"
-             Icon="/Static/Icons/headset-white.png">
+             Icon="/Static/Icons/icon.png">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
