--- a/Views/KeybindWindowView.xaml
+++ b/Views/KeybindWindowView.xaml
@@ -2,7 +2,7 @@
              xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI" 
              xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
              xmlns:adonisExtensions="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
-             x:Class="TAC_COM.Views.KeybindWindow"
+             x:Class="TAC_COM.Views.KeybindWindowView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
