--- a/Views/AudioInterfaceView.xaml
+++ b/Views/AudioInterfaceView.xaml
@@ -56,6 +56,7 @@
                 <ProgressBar Grid.Column="2" Grid.Row="4" Orientation="Vertical" Height="20" Width="4" Margin="10, 0, 0, 0"
                              VerticalAlignment="Center" HorizontalAlignment="Center"
                              Foreground="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}"
+                             Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
                              Value="{Binding AudioManager.InputPeakMeter}"/>
             </StackPanel>
 
@@ -85,6 +86,7 @@
                 <ProgressBar Grid.Column="2" Grid.Row="4" Orientation="Vertical" Height="20" Width="4" Margin="10, 0, 0, 0"
                              VerticalAlignment="Center" HorizontalAlignment="Center"
                              Foreground="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}"
+                             Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
                              Value="{Binding AudioManager.OutputPeakMeter}"/>
             </StackPanel>
 
