--- a/Themes/ThemeSSC.xaml
+++ b/Themes/ThemeSSC.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI">
-    
+
     <!--Dropdown box border, Progress bar fill, Label text-->
     <Color x:Key="{x:Static adonisUi:Colors.AccentColor}">#ff0000</Color>
 
@@ -19,7 +19,13 @@
     <Color x:Key="{x:Static adonisUi:Colors.Layer0BackgroundColor}">#2b2b2b</Color>
 
     <!--Inactive dropdown menu background, Sliders-->
-    <Color x:Key="{x:Static adonisUi:Colors.Layer1BackgroundColor}">#ffefefef</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer1BackgroundColor}">#1f1f1f</Color>
+
+    <!--Hover gradient-->
+    <Color x:Key="{x:Static adonisUi:Colors.Layer1HighlightColor}">#1f1f1f</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer1IntenseHighlightColor}">#313131</Color>
+    <!--Dropdown border-->
+    <Color x:Key="{x:Static adonisUi:Colors.Layer1IntenseHighlightBorderColor}">#ff0000</Color>
 
     <!--Enable/disable/edit buttons-->
     <!--Toggle Off-->
@@ -40,5 +46,9 @@
     <Color x:Key="{x:Static adonisUi:Colors.Layer4BorderColor}">#ababab</Color>
     <!--Marker/Gauge-->
     <Color x:Key="{x:Static adonisUi:Colors.Layer4HighlightColor}">#ff0000</Color>
-    
+
+    <!--Dial normal/hover-->
+    <Color x:Key="{x:Static adonisUi:Colors.Layer4BackgroundColor}">#2b2b2b</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer4IntenseHighlightColor}">#5d5d5d</Color>
+
 </ResourceDictionary>
